welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:9: error: ')' expected but '}' found.
	}
        ^